crates/rehearse/tests/ui/operation/fail/non_async.rs
use rehearse::operation;

#[derive(Debug)]
struct Error;

#[operation(impact = read)]
fn bad() -> Result<(), Error> {
    Ok(())
}

fn main() {}

