crates/rehearse/tests/ui/operation/fail/non_async.stderr
error: `#[operation]` currently supports async functions only
 --> tests/ui/operation/fail/non_async.rs:7:1
  |
7 | fn bad() -> Result<(), Error> {
  | ^^
